# dev.a7exschin.sca

./: README.md  angular.json  package-lock.json  package.json
src/: index.html  main.ts  styles.scss  tsconfig.app.json  tsconfig.spec.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  main.rs
src-tauri/src/confighandler/: mod.rs
src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.ts  app.module.ts  page.tsx
src/app/calculator/: calc-routing.module.ts  calc.component.html  calc.component.spec.ts  calc.component.ts  calc.module.ts
src/app/core/services/tauri/: tauri.service.ts
src/app/home/: home.component.html  home.component.scss  home.component.spec.ts  home.component.ts  home.module.ts
src/app/settings/: settings.component.html  settings.component.scss  settings.component.spec.ts  settings.component.ts  settings.module.ts
src/assets/i18n/: de.json  en.json
