[package]
name = "StarCitizen-Assistant"
version = "0.1.0"
description = "An Assistant App for Star Citizen"
authors = ["A7exSchin"]
license = ""
repository = ""
default-run = "StarCitizen-Assistant"
edition = "2021"
rust-version = "1.74.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
tauri = { version = "1.5.2", features = ["api-all"] }
directories = "5.0.1"
prefstore = "0.5.0"
dirs = "5.0.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
